# esp-now

./: .codespellrc  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  SECURITY.md  User_Guide.md  User_Guide_CN.md  idf_component.yml
.github/workflows/: upload_component.yml
.gitlab/ci/: pre_commit.yml
components/control/: CMakeLists.txt
components/control/include/: espnow_ctrl.h
components/control/src/: espnow_ctrl.c
components/debug/: CMakeLists.txt  Kconfig
components/debug/include/: espnow_console.h  espnow_log.h
components/debug/include/sdcard/: sdcard.h
components/debug/src/: espnow_commands.c  espnow_console.c  espnow_log.c  espnow_log_flash.c  espnow_log_flash.h
components/debug/src/commands/: cmd_espnow.c  cmd_iperf.c  cmd_peripherals.c  cmd_system.c  cmd_wifi.c  cmd_wifi_sniffer.c
components/debug/src/commands/pcap/: pcap.c
components/espnow/: CMakeLists.txt  Kconfig
components/espnow/include/: espnow.h
components/espnow/src/: espnow.c  espnow_group.c
components/ota/: CMakeLists.txt  espnow_ota_initiator.c  espnow_ota_responder.c
components/ota/include/: espnow_ota.h
components/protocomm/: CMakeLists.txt
components/provisioning/: CMakeLists.txt
components/provisioning/include/: espnow_prov.h
components/provisioning/src/: espnow_prov.c
components/security/: CMakeLists.txt
components/security/include/: espnow_security.h  espnow_security_handshake.h
components/security/include/protocomm/security/: protocomm_client_security1.h
components/security/src/: espnow_security.c  espnow_security_initiator.c  espnow_security_responder.c
components/security/src/protocomm/security/: client_security1.c
components/utils/: CMakeLists.txt  Kconfig
components/utils/include/: esp_mem.h  esp_storage.h  esp_utils.h
components/utils/src/: esp_mem.c  esp_reboot.c  esp_storage.c  esp_utils.c
docs/: Doxyfile  README.md  conf_common.py
docs/_static/: esp-now.js
docs/en/: conf.py  index.rst  introduction.rst
docs/en/api-reference/: index.rst
docs/en/api-reference/control/: espnow_ctrl.rst  index.rst
docs/en/api-reference/debug/: espnow_cmd.rst  espnow_console.rst  espnow_log.rst  index.rst
docs/en/api-reference/espnow/: espnow.rst  index.rst
docs/en/api-reference/ota/: espnow_ota.rst  index.rst
docs/en/api-reference/provisioning/: espnow_prov.rst  index.rst
docs/en/api-reference/security/: espnow_security.rst  index.rst  (+1 more)
examples/coin_cell_demo/: README.md
examples/coin_cell_demo/bulb/: sdkconfig.defaults
examples/coin_cell_demo/switch/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32c2  sdkconfig.defaults.v1  sdkconfig.defaults.v2
examples/control/: CMakeLists.txt  README.md
examples/control/main/: CMakeLists.txt  app_main.c  idf_component.yml
examples/debug/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/debug/main/: Kconfig.projbuild  app_main.c
examples/dev_kits/button_remote_control/: README.md  sdkconfig.defaults
examples/dev_kits/button_touch/: CMakeLists.txt  sdkconfig.defaults
examples/dev_kits/button_wall_switch/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/dev_kits/light_pwm/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/dev_kits/sensor_human_infrared/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/get-started/: CMakeLists.txt  README.md
examples/get-started/main/: Kconfig.projbuild  app_main.c
examples/ota/: CMakeLists.txt  README.md  partitions_2MB.csv  sdkconfig.ci.anti_rollback  sdkconfig.defaults
examples/ota/main/: Kconfig.projbuild  app_main.c
examples/provisioning/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/provisioning/main/: Kconfig.projbuild  app_main.c  debug_recv.c.bak  idf_component.yml
examples/security/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/security/main/: Kconfig.projbuild  app_main.c  idf_component.yml
examples/solution/: CMakeLists.txt  README.md  partitions_4MB.csv  sdkconfig.defaults
examples/solution/main/: Kconfig.projbuild  app_main.c  app_main.h  idf_component.yml  init_main.c  start_main.c
examples/wireless_debug/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/wireless_debug/components/espnow_device/: CMakeLists.txt  monitor.c  monitored.c
examples/wireless_debug/components/espnow_device/include/: monitor.h
examples/wireless_debug/components/web_server/: CMakeLists.txt  README.md  dns_server.c  dns_server.h  web_server.c
examples/wireless_debug/components/web_server/front/: index.html  jump.html
examples/wireless_debug/components/web_server/front/static/css/: app.03aa03747a9ebd45cd2fe5c0e2273a8f.css  app.68395e2c61883930c6eb940257bb71df.css
examples/wireless_debug/components/web_server/front/static/js/: app.e66acae750b3d72cd9e0.js  app.eb7d59b9e18cd1d43955.js  echarts.min.js  vendor.f1dbfe5427f81cd540de.js
examples/wireless_debug/components/web_server/include/: web_server.h
examples/wireless_debug/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml  monitor.c  monitor.h  monitored.c
src/control/include/: espnow_ctrl.h
src/control/src/: espnow_ctrl.c
src/debug/include/: espnow_cmd.h  espnow_console.h  espnow_log.h
src/debug/src/: espnow_console.c  espnow_log.c  espnow_log_flash.c  espnow_log_flash.h
src/espnow/include/: espnow.h
src/espnow/src/: espnow.c  espnow_group.c
src/ota/: espnow_ota_initiator.c  espnow_ota_responder.c
src/ota/include/: espnow_ota.h
src/provisioning/include/: espnow_prov.h
src/provisioning/src/: espnow_prov.c
src/security/include/: espnow_security.h  espnow_security_handshake.h
src/security/src/: espnow_security.c  espnow_security_initiator.c  espnow_security_responder.c
src/time/include/: espnow_time.h
src/time/src/: espnow_time.c
src/utils/include/: esp_mem.h  espnow_mem.h  espnow_storage.h  espnow_utils.h
src/utils/src/: esp_mem.c  esp_reboot.c  esp_storage.c  esp_timesync.c  esp_utils.c  espnow_mem.c  espnow_reboot.c  espnow_storage.c  espnow_timesync.c  espnow_utils.c
tools/ci/: build_examples_cmake.sh
(+76 files in other folders)
